# KindleMostWanted

./: README.md  kmw.py  pyproject.toml
csv/: README.md  books.csv  books_prices.csv  booksprices.csv  christie.csv  christie_prices.csv  short.csv  short_prices.csv
